# libkafka-1

./: .gitignore  .travis.yml  Makefile.am  README.md  TODO  autogen.sh  cleanup.sh  configure.ac  index.html  libkafka.pc.in  params.json
docs/: kafka_wire_format.org
include/: kafka.h
src/: Makefile.am  broker.c  buffer.c  crc32.c  kafka-private.h  kafka.c  libkafka.sym  message.c  message_set.c  serialize.c  serialize.h  utils.c  vector.c  vector.h
src/jansson/: dump.c  hashtable.c  load.c  strbuffer.c  value.c
src/metadata/: metadata_request.c  metadata_response.c  partition_metadata.c
src/producer/: produce_request.c  producer.c  request.c  watchers.c
test/: .gitignore  Makefile.am  batch_produce_request.c  produce_request.c  test.c  test_metadata_request  test_metadata_request.c
